tests/snapshots/lexer_snapshots__lexer_all@tokens-162.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/validator/p5_comparison_yields_bool.of
---
Ok(
    [
        Token {
            token_type: Function,
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "test",
            ),
            position: 13,
            line: 1,
            column: 14,
        },
        Token {
            token_type: LeftParen,
            position: 14,
            line: 1,
            column: 15,
        },
        Token {
            token_type: RightParen,
            position: 15,
            line: 1,
            column: 16,
        },
        Token {
            token_type: LeftBrace,
            position: 17,
            line: 1,
            column: 18,
        },
        Token {
            token_type: Int(
                "5",
            ),
            position: 19,
            line: 1,
            column: 20,
        },
        Token {
            token_type: EqEq,
            position: 22,
            line: 1,
            column: 23,
        },
        Token {
            token_type: Int(
                "5",
            ),
            position: 24,
            line: 1,
            column: 25,
        },
        Token {
            token_type: Semicolon,
            position: 25,
            line: 1,
            column: 26,
        },
        Token {
            token_type: RightBrace,
            position: 27,
            line: 1,
            column: 28,
        },
    ],
)
