tests/snapshots/lexer_snapshots__lexer_all@tokens-163.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/validator/p5_continue_inside_while_ok.of
---
Ok(
    [
        Token {
            token_type: Function,
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "test",
            ),
            position: 13,
            line: 1,
            column: 14,
        },
        Token {
            token_type: LeftParen,
            position: 14,
            line: 1,
            column: 15,
        },
        Token {
            token_type: RightParen,
            position: 15,
            line: 1,
            column: 16,
        },
        Token {
            token_type: LeftBrace,
            position: 17,
            line: 1,
            column: 18,
        },
        Token {
            token_type: While,
            position: 23,
            line: 1,
            column: 24,
        },
        Token {
            token_type: LeftParen,
            position: 25,
            line: 1,
            column: 26,
        },
        Token {
            token_type: True,
            position: 29,
            line: 1,
            column: 30,
        },
        Token {
            token_type: RightParen,
            position: 30,
            line: 1,
            column: 31,
        },
        Token {
            token_type: LeftBrace,
            position: 32,
            line: 1,
            column: 33,
        },
        Token {
            token_type: Continue,
            position: 41,
            line: 1,
            column: 42,
        },
        Token {
            token_type: Semicolon,
            position: 42,
            line: 1,
            column: 43,
        },
        Token {
            token_type: RightBrace,
            position: 44,
            line: 1,
            column: 45,
        },
        Token {
            token_type: RightBrace,
            position: 46,
            line: 1,
            column: 47,
        },
    ],
)
