tests/snapshots/lexer_snapshots__lexer_all@tokens-170.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/validator/p5_null_assignable_to_nullable_union.of
---
Ok(
    [
        Token {
            token_type: Type,
            position: 4,
            line: 1,
            column: 5,
        },
        Token {
            token_type: Identifier(
                "Opt",
            ),
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: Eq,
            position: 10,
            line: 1,
            column: 11,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 14,
            line: 1,
            column: 15,
        },
        Token {
            token_type: Pipe,
            position: 16,
            line: 1,
            column: 17,
        },
        Token {
            token_type: Null,
            position: 21,
            line: 1,
            column: 22,
        },
        Token {
            token_type: Semicolon,
            position: 22,
            line: 1,
            column: 23,
        },
        Token {
            token_type: Function,
            position: 31,
            line: 2,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "test",
            ),
            position: 36,
            line: 2,
            column: 14,
        },
        Token {
            token_type: LeftParen,
            position: 37,
            line: 2,
            column: 15,
        },
        Token {
            token_type: RightParen,
            position: 38,
            line: 2,
            column: 16,
        },
        Token {
            token_type: LeftBrace,
            position: 40,
            line: 2,
            column: 18,
        },
        Token {
            token_type: Var,
            position: 44,
            line: 2,
            column: 22,
        },
        Token {
            token_type: Identifier(
                "x",
            ),
            position: 46,
            line: 2,
            column: 24,
        },
        Token {
            token_type: Colon,
            position: 47,
            line: 2,
            column: 25,
        },
        Token {
            token_type: Identifier(
                "Opt",
            ),
            position: 51,
            line: 2,
            column: 29,
        },
        Token {
            token_type: Eq,
            position: 53,
            line: 2,
            column: 31,
        },
        Token {
            token_type: Null,
            position: 58,
            line: 2,
            column: 36,
        },
        Token {
            token_type: Semicolon,
            position: 59,
            line: 2,
            column: 37,
        },
        Token {
            token_type: RightBrace,
            position: 61,
            line: 2,
            column: 39,
        },
    ],
)
