tests/snapshots/lexer_snapshots__lexer_all@tokens-175.snap
---
source: tests/lexer_snapshots.rs
assertion_line: 13
expression: tokens
input_file: examples/validator/p5_self_member_access_in_method.of
---
Ok(
    [
        Token {
            token_type: Struct,
            position: 6,
            line: 1,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "S",
            ),
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: LeftBrace,
            position: 10,
            line: 1,
            column: 11,
        },
        Token {
            token_type: Identifier(
                "x",
            ),
            position: 12,
            line: 1,
            column: 13,
        },
        Token {
            token_type: Colon,
            position: 13,
            line: 1,
            column: 14,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 17,
            line: 1,
            column: 18,
        },
        Token {
            token_type: Function,
            position: 26,
            line: 1,
            column: 27,
        },
        Token {
            token_type: Identifier(
                "m",
            ),
            position: 28,
            line: 1,
            column: 29,
        },
        Token {
            token_type: LeftParen,
            position: 29,
            line: 1,
            column: 30,
        },
        Token {
            token_type: RightParen,
            position: 30,
            line: 1,
            column: 31,
        },
        Token {
            token_type: LeftBrace,
            position: 32,
            line: 1,
            column: 33,
        },
        Token {
            token_type: SelfRef,
            position: 37,
            line: 1,
            column: 38,
        },
        Token {
            token_type: Dot,
            position: 38,
            line: 1,
            column: 39,
        },
        Token {
            token_type: Identifier(
                "x",
            ),
            position: 39,
            line: 1,
            column: 40,
        },
        Token {
            token_type: Semicolon,
            position: 40,
            line: 1,
            column: 41,
        },
        Token {
            token_type: RightBrace,
            position: 42,
            line: 1,
            column: 43,
        },
        Token {
            token_type: RightBrace,
            position: 44,
            line: 1,
            column: 45,
        },
    ],
)
